# rust-elm-boilerplate

./: .gitignore  Cargo.toml  LICENSE  README.md  api_types.yml  build.rs  run.sh
gui/: app.js  build-gui.sh  dev.html  elm-dist.js  elm.json  styles.css
gui/src/: ApiTypes.elm  Main.elm
src/: api_types.rs  gui.rs  main.rs
