[package]
name = "rust-elm-boilerplate"
version = "0.1.0"
authors = ["Kris Scott <kscott91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
log = "0.4"
stderrlog = "0.4"
web-view = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rust_elm_types = { git = "https://github.com/krscott/rust_elm_types.git", rev = "77de75bcde0c17bed32cb207ea40483e92d78267"}
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"